# handoff

./: .gitignore  README.md  install.sh  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-09-generic-handoff-export-implementation.md  2026-04-09-portable-handoff-implementation.md  2026-04-09-session-capture-to-claude-implementation.md  2026-04-12-agent-centric-skills-implementation.md
docs/superpowers/specs/: 2026-04-09-generic-handoff-export-design.md  2026-04-09-portable-handoff-design.md  2026-04-09-session-capture-to-claude-design.md  2026-04-12-agent-centric-handoff-design.md
scripts/: handoff-to-claude.sh  self-test.sh
skills/handoff/: SKILL.md
src/handoff/: capture.py  checkpoint.py  cli.py  compiler.py  constraints.py  install.py  memory.py  merge.py  models.py  store.py
src/handoff/adapters/: __init__.py  base.py  omx.py  raw.py
src/handoff/assets/get-handoff/: SKILL.md
tests/: test_agent_handoff_integration.py  test_agent_handoff_store.py  test_capture.py  test_cli.py  test_compiler.py  test_constraints.py  test_get_handoff_merge.py  test_handoff_rendering.py  test_install.py  test_memory.py  test_omx_adapter.py  test_skill.py  test_skill_workflow.py  test_store.py
tests/fixtures/omx/: notepad.md  project-memory.json
tests/fixtures/omx/plans/: 2026-04-08-sample-plan.md
tests/fixtures/omx/state/: session.json
