[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-handoff"
version = "0.1.0"
description = "Portable handoff state for cross-agent resume"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
handoff = ["assets/handoff/SKILL.md", "assets/get-handoff/SKILL.md"]
